[package]
name = "imgroll"
version = "0.1.0"
authors = ["Greg V <greg@unrelenting.technology>"]
keywords = ["Image", "Picture", "Photo"]
description = "Image processor for web publishing (made for sweetroll2)"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/imgroll"
repository = "https://github.com/myfreeweb/imgroll"
edition = "2018"

[dependencies]
snafu = "0.6"
snafu-derive = "0.6"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1"
rgb = { version = "0.8", features = ["serde"] }
num-rational = { version = "0.2", features = ["serde"] }
base64 = "0"
hex = "0.4"
tiny-keccak = { version = "2", features = ["parallel_hash"] }
slug = "0.1"
image = { version = "0.22", default-features = false, features = ["png_codec", "jpeg"] }
rexiv2 = "0.9"
color-thief = { git = "https://github.com/RazrFalcon/color-thief-rs" } # error trait
exoquant = "0.2"
og-libwebp-sys = "0.1"
mozjpeg = "0.8"
lodepng = "2.5"
zopfli = "0.4"
log = "0.4"
simple_logger = "1.3"
failure = "0.1"
reqwest = { version = "0.9", default_features = false, features = ["rustls-tls"] }
 # https://github.com/awslabs/aws-lambda-rust-runtime/pull/182
lambda_runtime = { git = "https://github.com/phillyfan1138/aws-lambda-rust-runtime" }
lambda_runtime_errors = { git = "https://github.com/phillyfan1138/aws-lambda-rust-runtime" }
aws_lambda_events = "0.2"
rusoto_core = { version = "0.42", default_features = false, features = ["rustls"] }
rusoto_signature = { version = "0.42" }
rusoto_s3 = { version = "0.42", default_features = false, features = ["rustls"] }

[profile.release]
lto = true
