[package]
name = "imgroll"
version = "0.1.0"
authors = ["Greg V <greg@unrelenting.technology>"]
keywords = ["Image", "Picture", "Photo"]
description = "Image processor for web publishing (made for sweetroll2)"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/imgroll"
repository = "https://github.com/myfreeweb/imgroll"
edition = "2018"

[dependencies]
snafu = "0.6"
snafu-derive = "0.6"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1"
rgb = { version = "0.8", features = ["serde"] }
num-rational = { version = "0.2", features = ["serde"] }
base64 = "0"
hex = "0.4"
tiny-keccak = { version = "2", features = ["parallel_hash"] }
slug = "0.1"
image = { version = "0.23", default-features = false, features = ["png", "jpeg"] }
rexiv2 = "0.9"
color-thief = { git = "https://github.com/RazrFalcon/color-thief-rs" } # error trait
exoquant = "0.2"
og-libwebp-sys = "0.1"
mozjpeg = "0.8"
lodepng = "2.5"
zopfli = "0.4"
log = "0.4"
simple_logger = "1.3"
failure = "0.1"
tokio = "0.2"
reqwest = { version = "0.10", default_features = false, features = ["rustls-tls"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "async-await" }
aws_lambda_events = "0.2"
rusoto_core = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
rusoto_signature = { version = "0.43.0-beta.1" }
rusoto_s3 = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }

[profile.release]
lto = true

[patch.crates-io]
hyper-rustls = { git = "https://github.com/ctz/hyper-rustls" }
rustls-native-certs = { git = "https://github.com/ctz/rustls-native-certs" }
